--- a/CVstyles.css
+++ b/CVstyles.css
@@ -33,6 +33,11 @@ h3, h4
 	font-weight: 700;
 	color: #3A506B; 
 }
+h5 
+{
+	font-size: 90%;
+	font-style: italic;
+}
 h2, ul h4
 {
 	font-style: italic;
