--- a/CVstyles.css
+++ b/CVstyles.css
@@ -75,6 +75,16 @@ h2, ul h4
 	margin-right: -12px;
 	margin-bottom: 50px;
 }
+.section-box h4 
+{
+	margin-bottom: 15px;
+	margin-top: 15px;
+	font-size: 110%
+}
+.section-box p
+{
+	font-size:80%;
+}
 .emphasis {
 	font-weight: 700; 
 	color: #38E4AE;
