--- a/CVstyles.css
+++ b/CVstyles.css
@@ -77,9 +77,9 @@ h2, ul h4
 }
 .section-box h4 
 {
-	margin-bottom: 15px;
-	margin-top: 15px;
-	font-size: 110%
+	margin-bottom: 10px;
+	margin-top: 10px;
+	font-size: 100%;
 }
 .section-box p
 {
