--- a/CVstyles.css
+++ b/CVstyles.css
@@ -19,11 +19,11 @@ body
 		padding-right: 165px;
 	}
 }*/
-.container 
+/*.container 
 { 
 	margin: 0 auto 0 auto;
 	width: 600px;
-}
+}*/
 /*@media (min-width: 600px) {
   .container {
     margin: 0 auto 0 auto;
@@ -52,7 +52,8 @@ h3
 }
 h4
 {
-	font-size: 105%;
+	font-size: 100%;
+	padding-bottom: 0;
 }
 h5 
 {
