--- a/CVstyles.css
+++ b/CVstyles.css
@@ -13,6 +13,11 @@ body
 	padding-left: 165px; 
 	padding-right: 165px;
 }
+
+.smallbody 
+{
+	font-size: 80%;
+}
 /*@media (min-width: 600px) {
 	body {
 		padding-left: 165px; 
@@ -57,7 +62,7 @@ h4
 }
 h5 
 {
-	font-size: 90%;
+	font-size: 80%;
 	font-style: italic;
 }
 h2, ul h4
