white pipe in footer, removed lengthy copy

--- a/CVstyles.css
+++ b/CVstyles.css
@@ -198,6 +198,10 @@ header h3
 	border: 3px solid #FCFFFE;
 	margin: 0 auto 0 auto;
 }
+.whitepipe
+{
+	color: #FCFFFE;
+}
 	/*font-size:87.5%;
 	padding: 25px 15% 75px 15%;
 	margin:50px;
