--- a/CVstyles.css
+++ b/CVstyles.css
@@ -53,7 +53,7 @@ h3, h4
 h3
 {
 	font-size: 120%;
-	text-align: center;
+	/*text-align: center;*/
 }
 h4
 {
@@ -129,9 +129,9 @@ a:visited
 {
 	color: #D68685;
 }
-ul {
+/*ul {
   list-style-image: url("https://dv1.pagos.com/dashboardreport/images/kpi/black_triangle.gif")
-}
+}*/
 ul ul 
 {
 	list-style-image: initial; 
